changed the directory.

--- a/webhome-3/index.html
+++ b/webhome-3/index.html
@@ -14,7 +14,7 @@
     <body>
     <div class="wrap">
         <header>
-            <iframe src="header.html" scrolling="no" frameborder="no" width="100%"></iframe>
+            <iframe src="html_folder/" scrolling="no" frameborder="no" width="100%"></iframe>
         </header>
         <div class="main-arti">
             <div class="main1">
@@ -32,7 +32,7 @@
         </div>
         <div class="main-body">
             <div class="left">
-                <iframe src="leftmenu.html" scrolling="no" frameborder="no"></iframe>
+                <iframe src="html_folder/leftmenu.html" scrolling="no" frameborder="no"></iframe>
             </div>
             <div class="arti-list">
                 <a href="https://px.a8.net/svt/ejp?a8mat=3TF708+C3TBLE+348+6O9OX" rel="nofollow">
@@ -75,11 +75,11 @@
                 </div>
             </div>
             <div class="right">
-                <iframe class="ri-i" src="rightmenu.html" scrolling="no" frameborder="no"></iframe>
+                <iframe class="ri-i" src="html_folder/rightmenu.html" scrolling="no" frameborder="no"></iframe>
             </div>
         </div>
         <footer>
-            <iframe src="footer.html" scrolling="no" frameborder="no" width="100%"></iframe>
+            <iframe src="html_folder/footer.html" scrolling="no" frameborder="no" width="100%"></iframe>
         </footer>
     </div>
     </body>
