--- a/webhome-3/index.html
+++ b/webhome-3/index.html
@@ -14,7 +14,7 @@
     <body>
     <div class="wrap">
         <header>
-            <iframe src="html_folder/" scrolling="no" frameborder="no" width="100%"></iframe>
+            <iframe src="html_folder/header.html" scrolling="no" frameborder="no" width="100%"></iframe>
         </header>
         <div class="main-arti">
             <div class="main1">
