--- a/webhome-3/index.html
+++ b/webhome-3/index.html
@@ -14,25 +14,25 @@
     <body>
     <div class="wrap">
         <header>
-            <iframe src="html_folder/header.html" scrolling="no" frameborder="no" width="100%"></iframe>
+            <iframe src="pacture/header.html" scrolling="no" frameborder="no" width="100%"></iframe>
         </header>
         <div class="main-arti">
             <div class="main1">
                 <img src="img/sen.jpeg">
-                <h1><a href="fan.html">おすすめ扇風機5選!!!</a></h1>
+                <h1><a href="pacture/fan.html">おすすめ扇風機5選!!!</a></h1>
             </div>
             <div class="main2">
                 <img src="img/uiui.jpg">
-                <h1><a href="whisky.html">おすすめウイスキー5選!!!</a></h1>
+                <h1><a href="pacture/whisky.html">おすすめウイスキー5選!!!</a></h1>
             </div>
             <div class="main3">
                 <img src="img/sen.jpg">
-                <h1><a href="washing.html">おすすめ洗濯機5選!!!</a></h1>
+                <h1><a href="pacture/washing.html">おすすめ洗濯機5選!!!</a></h1>
             </div>
         </div>
         <div class="main-body">
             <div class="left">
-                <iframe src="html_folder/leftmenu.html" scrolling="no" frameborder="no"></iframe>
+                <iframe src="pacture/leftmenu.html" scrolling="no" frameborder="no"></iframe>
             </div>
             <div class="arti-list">
                 <a href="https://px.a8.net/svt/ejp?a8mat=3TF708+C3TBLE+348+6O9OX" rel="nofollow">
@@ -40,7 +40,7 @@
                 <img border="0" width="1" height="1" src="https://www14.a8.net/0.gif?a8mat=3TF708+C3TBLE+348+6O9OX" alt="">
                 <div class="arti-1">
                     <div><img src="img/sen.jpeg"></div>
-                    <div><h1><a href="fan.html">おすすめ扇風機10選!!!</a></h1></div>
+                    <div><h1><a href="pacture/fan.html">おすすめ扇風機10選!!!</a></h1></div>
                 </div>
                 <div class="arti-1">
                     <div><a href="https://px.a8.net/svt/ejp?a8mat=3TF707+J1W4Y+2990+6B70I" rel="nofollow">国内のショッピングサイトをワンクリックでまとめて検索【オークファン】</a></div>
@@ -48,11 +48,11 @@
                 </div>
                 <div class="arti-1">
                     <div><img src="img/uiui.jpg"></div>
-                    <div><h1><a href="whisky.html">おすすめウイスキー5選!!!</a></h1></div>
+                    <div><h1><a href="pacture/whisky.html">おすすめウイスキー5選!!!</a></h1></div>
                 </div>
                 <div class="arti-1">
                     <div><img src="img/movie1/samune1.jpg"></div>
-                    <div><h1><a href="movie1.html">おすすめ映画5選!!!</a></h1></div>
+                    <div><h1><a href="pacture/movie1.html">おすすめ映画5選!!!</a></h1></div>
                 </div>
                 <a href="https://px.a8.net/svt/ejp?a8mat=3T22ZC+2HWH4I+50+2HK8J5" rel="nofollow">
                     <img border="0" width="350" height="80" alt="" src="https://www28.a8.net/svt/bgt?aid=230204568151&wid=001&eno=01&mid=s00000000018015043000&mc=1"></a>
@@ -62,11 +62,11 @@
                     <img border="0" width="1" height="1" src="https://www15.a8.net/0.gif?a8mat=3TF5FP+2VLG1E+3D3Q+TUO9T" alt="">
                 <div class="arti-1">
                     <div><img src="img/movie1/samune2.jpg"></div>
-                    <div><h1><a href="movie2.html">おすすめ映画5選第2弾!!!</a></h1></div>
+                    <div><h1><a href="pacture/movie2.html">おすすめ映画5選第2弾!!!</a></h1></div>
                 </div>
                 <div class="arti-1">
                     <div><img src="img/sen.jpg"></div>
-                    <div><h1><a href="washing.html">おすすめ洗濯機5選!!!</a></h1></div>
+                    <div><h1><a href="pacture/washing.html">おすすめ洗濯機5選!!!</a></h1></div>
                 </div>
                 <div class="ad-1">
                     <a href="https://px.a8.net/svt/ejp?a8mat=3TF5FO+DW44XE+51YA+5ZEMP" rel="nofollow">
@@ -75,11 +75,11 @@
                 </div>
             </div>
             <div class="right">
-                <iframe class="ri-i" src="html_folder/rightmenu.html" scrolling="no" frameborder="no"></iframe>
+                <iframe class="ri-i" src="pacture/rightmenu.html" scrolling="no" frameborder="no"></iframe>
             </div>
         </div>
         <footer>
-            <iframe src="html_folder/footer.html" scrolling="no" frameborder="no" width="100%"></iframe>
+            <iframe src="pacture/footer.html" scrolling="no" frameborder="no" width="100%"></iframe>
         </footer>
     </div>
     </body>
