added search func.

--- a/webhome-3/pacture/header.html
+++ b/webhome-3/pacture/header.html
@@ -10,11 +10,16 @@
         <img src="../img/Pac.png">
     </a>
     <h1>
-        <form action="search.html" method="get" target="_top">
-            <input type="search" name="search" class="search" placeholder="キーワード">
-            <input type="submit" class="search_" value="検索">
-        </form> 
+        <input type="text" id="searchInput" class="search" placeholder="キーワード">
+        <button onclick="redirectToSearch()">検索</button>
+        <div id="results"></div>
     </h1>
+    <script>
+        function redirectToSearch() {
+            const keyword = document.getElementById('searchInput').value;
+            window.top.location.href = `search.html?q=${encodeURIComponent(keyword)}`;
+        }
+    </script>
 
 
     <!--
