--- a/webhome-3/pacture/search.html
+++ b/webhome-3/pacture/search.html
@@ -10,6 +10,7 @@
         <link rel="shortcut icon" href="../img/Pac.ico" type="image/x-icon">
         <link rel="apple-touch-icon" href="../img/Pac.png" sizes="180x180">
         <link rel="icon" type="image/png" href="../img/Pac.png" sizes="192x192">
+        <script src="../js_folder/search.js" defer></script>
     </head>
     <body>
     <div class="wrap">
@@ -21,38 +22,9 @@
                 <iframe src="leftmenu.html" scrolling="no" frameborder="no"></iframe>
             </div>
             <div class="arti">
-                <h1>title</h1>
-                <a href=../index.html><img class="logo" src="../img/Pac.png"></a><p class="open_day">公開日 2023/**/△△</p>
-                <p>導入文</p>
-                <div class="table">
-                    <h1>もくじ</h1>
-                    <ul>
-                        <a href="#mo-1"><li>目次１</li></a>
-                        <a href="#mo-2"><li>目次２</li></a>
-                        <a href="#mo-3"><li>目次３</li></a>
-                        <a href="#mo-4"><li>目次４</li></a>
-                        <a href="#mo-5"><li>目次５</li></a>
-                        <a href="#mo-6"><li>目次６</li></a>
-                        <a href="#mo-7"><li>まとめ</li></a>
-                        <a href="#re-arti"><li>関連記事</li></a>
-                    </ul>
-                </div>
-                <h2 id="mo-1">目次１</h2>
-                <!--一つ目の項目--><!--小見出しはh3、その他はp-->
-                <a href="#" class="link">楽天市場で見る   ></a>
-                <!--#をURLに変え、400×400の画像リンクを上に貼る-->
-                <h2 id="mo-2">目次２</h2>
-                <!--二つ目の項目-->
-                <a href="#" class="link">楽天市場で見る   ></a>
-                <h2 id="mo-3">目次３</h2>
-                <a href="#" class="link">楽天市場で見る   ></a>
-                <h2 id="mo-4">目次４</h2>
-                <a href="#" class="link">楽天市場で見る   ></a>
-                <h2 id="mo-5">目次５</h2>
-                <a href="#" class="link">楽天市場で見る   ></a>
-                <h2 id="mo-6">目次６</h2>
-                <h2 id="mo-7">まとめ</h2>
-                <img class="free_img" src="#">
+                <h1>検索結果</h1>
+                <a href=../index.html><img class="logo" src="../img/Pac.png"></a><p class="open_day">公開日 2023/09/30</p>
+                <div id="results"></div>
                 <h2 id="re-arti">関連記事</h2>
                 <div class="arti-list">
                     <a href="https://px.a8.net/svt/ejp?a8mat=3TF708+C3TBLE+348+6O9OX" rel="nofollow">
