fixed the func of search.

--- a/webhome-3/pacture/search.html
+++ b/webhome-3/pacture/search.html
@@ -10,7 +10,7 @@
         <link rel="shortcut icon" href="../img/Pac.ico" type="image/x-icon">
         <link rel="apple-touch-icon" href="../img/Pac.png" sizes="180x180">
         <link rel="icon" type="image/png" href="../img/Pac.png" sizes="192x192">
-        <script src="../js_folder/search.js" defer></script>
+        <script type="module" src="../js_folder/search.js"></script>
     </head>
     <body>
     <div class="wrap">
