--- a/webhome-3/pacture/DRR.html
+++ b/webhome-3/pacture/DRR.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <link rel="stylesheet" href="../css_folder/DRR.css"><!--css名変える-->
+        <link rel="stylesheet" href="../css_folder/article.css"><!--css名変える-->
         <title>【2023年度版】最新のおすすめ防災グッズ5選！！</title><!--1.タイトル-->
         <meta name="description" content="最新の防災グッズです！コンパクトで役に立つものを紹介しますのでぜひ手に取ってみてください！"><!--2.説明文-->
         <meta name="keywords" content="防災、戦争、地震、土砂災害、噴火、津波、南海トラフ地震、台湾有事"><!--3.キーワード-->
