--- a/webhome-3/pacture/ad.html
+++ b/webhome-3/pacture/ad.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <link rel="stylesheet" href="../css_folder/ad.css"><!--css名変える-->
+        <link rel="stylesheet" href="../css_folder/article.css"><!--css名変える-->
         <title>広告掲載のご相談</title><!--1.タイトル-->
         <meta name="description" content="ただいま作成中です"><!--2.説明文-->
         <meta name="keywords" content="広告掲載, 広告"><!--3.キーワード-->
