--- a/webhome-3/pacture/cleaner.html
+++ b/webhome-3/pacture/cleaner.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="stylesheet" href="../css_folder/cleaner.css">
+    <link rel="stylesheet" href="../css_folder/article.css">
     <title>【2023年版】掃除機で何を買えばいいのかわからない人は必見!!</title>
     <meta name="description" content="一人暮らしや引越しで掃除機を新調するとき、買うべき掃除機が分からない人に向けて、掃除機のことを1から10まで説明します！">
     <meta name="keywords" content="掃除, 掃除機, 夏, 汚れ, 清潔, 布団, ルンバ">
