--- a/webhome-3/pacture/company.html
+++ b/webhome-3/pacture/company.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <link rel="stylesheet" href="css_folder\conpany.css"><!--css名変える-->
+        <link rel="stylesheet" href="../css_folder/article.css"><!--css名変える-->
         <title>運営会社</title><!--1.タイトル-->
         <meta name="description" content="このサイトを運営しているものについて"><!--2.説明文-->
         <meta name="keywords" content="pacture, 運営会社"><!--3.キーワード-->
