--- a/webhome-3/pacture/movie1.html
+++ b/webhome-3/pacture/movie1.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <link rel="stylesheet" href="../css_folder/movie1.css"><!--css名変える-->
+        <link rel="stylesheet" href="../css_folder/article.css"><!--css名変える-->
         <title>>週末に観るべき映画 5選!!</title><!--1.タイトル-->
         <meta name="description" content="皆さんは平日に働いて疲れ、休日には趣味を楽しんでいることでしょう。しかし、映画選びを失敗してしまうこともあるかもしれません。この記事では、女性と見るのに適した映画や家族で感動できる映画など、さまざまな場面で楽しめる映画を紹介します。映画好きの方には既に知られた作品もあるかもしれませんが、次回の記事もお楽しみに！"><!--2.説明文-->
         <meta name="keywords" content="movie"><!--3.キーワード-->
