--- a/webhome-3/pacture/movie2.html
+++ b/webhome-3/pacture/movie2.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <link rel="stylesheet" href="../css_folder/movie2.css"><!--css名変える-->
+        <link rel="stylesheet" href="../css_folder/article.css"><!--css名変える-->
         <title>週末に観るべき映画第2弾 5選!!</title><!--1.タイトル-->
         <meta name="description" content="現在巷で有名である広告などが一切ない『君たちはどう生きるか』みなさんご覧になりましたか？僕自身もいまだに見れていないので期間中に絶対見に行きたいと思っています。"><!--2.説明文-->
         <meta name="keywords" content="movie"><!--3.キーワード-->
