--- a/webhome-3/pacture/OVEN.html
+++ b/webhome-3/pacture/OVEN.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="stylesheet" href="../css_folder/OVEN.css">
+    <link rel="stylesheet" href="../css_folder/article.css">
     <title>【2023年版】電子レンジで何を買えばいいのかわからない人は必見!!</title>
     <meta name="description" content="一人暮らしや引越しで電子レンジを新調するとき、オススメの電子レンジを紹介します！">
     <meta name="keywords" content="電子レンジ, オーブンレンジ, 単機能レンジ, 冷凍, 解凍, 温め, レンチン料理">
