--- a/webhome-3/pacture/logo.html
+++ b/webhome-3/pacture/logo.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <link rel="stylesheet" href="../css_folder/logo.css"><!--css名変える-->
+        <link rel="stylesheet" href="../css_folder/article.css"><!--css名変える-->
         <title>ロゴ / バナー</title><!--1.タイトル-->
         <meta name="description" content="当社のロゴ / バナーについて"><!--2.説明文-->
         <meta name="keywords" content="ロゴ, バナー, logo, banner"><!--3.キーワード-->
