--- a/webhome-3/pacture/private.html
+++ b/webhome-3/pacture/private.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <link rel="stylesheet" href="../css_folder/private.css"><!--css名変える-->
+        <link rel="stylesheet" href="../css_folder/article.css"><!--css名変える-->
         <title>プライバシーポリシー</title><!--1.タイトル-->
         <meta name="description" content="当サイトのプライバシーポリシーです"><!--2.説明文-->
         <meta name="keywords" content="プライバシーポリシー"><!--3.キーワード-->
