--- a/webhome-3/pacture/terms.html
+++ b/webhome-3/pacture/terms.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <link rel="stylesheet" href="../css_folder/terms.css"><!--css名変える-->
+        <link rel="stylesheet" href="../css_folder/article.css"><!--css名変える-->
         <title>利用規約</title><!--1.タイトル-->
         <meta name="description" content="利用規約"><!--2.説明文-->
         <meta name="keywords" content="利用規約"><!--3.キーワード-->
