--- a/webhome-3/pacture/whisky.html
+++ b/webhome-3/pacture/whisky.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <link rel="stylesheet" href="../css_folder/whisky.css">
+        <link rel="stylesheet" href="../css_folder/article.css">
         <title>【飲みやすい！】初心者におすすめの2000円代ウイスキー 5選</title><!--1.タイトル-->
         <meta name="description" content="2023年最新! 初心者でも飲めるおすすめのウイスキーを5つ厳選しました! お酒を選ぶ時の参考にしてみてください!"><!--2.説明文-->
         <meta name="keywords" content="お酒, ウイスキー, アルコール, 20歳, 酒"><!--3.キーワード-->
