--- a/webhome-3/pacture/leftmenu.html
+++ b/webhome-3/pacture/leftmenu.html
@@ -17,7 +17,7 @@
             <li><a href="MOVIE.html" target="_top">映画・ドラマ<span class="count">(2)</span></a></li>
             <li><a href="CONVENIENCE.html" target="_top">日用品<span class="count">(2)</span></a></li>
             <li><a href="OTHERS.html" target="_top">その他<span class="count">(1)</span></a></li>
-            <li><a href="home.html" target="_top">ホームへ戻る</a></li>
+            <li><a href="../index.html" target="_top">ホームへ戻る</a></li>
         </ul>
     </div> 
     <div class="ad-2">
