--- a/webhome-3/pacture/movie3.html
+++ b/webhome-3/pacture/movie3.html
@@ -85,7 +85,7 @@
                 <img src="../img/movie1/samune2.jpg" class="samune">
                 <p>以上、【週末に見るべきおすすめ映画５選】でした。</p>
                 <h2 id="re-arti">関連記事</h2>
-                <<div class="arti-list">
+                <div class="arti-list">
                     <a href="https://px.a8.net/svt/ejp?a8mat=3TF708+C3TBLE+348+6O9OX" rel="nofollow">
                         <img border="0" width="468" height="60" alt="" src="https://www24.a8.net/svt/bgt?aid=230816312732&wid=001&eno=01&mid=s00000000404001121000&mc=1"></a>
                         <img border="0" width="1" height="1" src="https://www14.a8.net/0.gif?a8mat=3TF708+C3TBLE+348+6O9OX" alt="">
@@ -105,8 +105,6 @@
                             <div><img src="../img/movie1/samune1.jpg"></div>
                             <div><h1><a href="movie1.html">おすすめ映画5選!!!</a></h1></div>
                         </div>
-                </div>
-                    
                 </div>
             </div>
             <div class="right">
