changed the css.

--- a/webhome-3/pacture/DRR.html
+++ b/webhome-3/pacture/DRR.html
@@ -20,7 +20,7 @@
             <div class="left">
                 <iframe src="leftmenu.html" scrolling="no" frameborder="no"></iframe>
             </div>
-            <div class="art">
+            <div class="arti">
                 <h1>【2023年度版】最新のおすすめ防災グッズ！！</h1>
                 <a href=../index.html><img class="logo" src="../img/Pac.png"></a><p class="open_day">公開日 2023/09/20</p>
                 <p>最近、色々物騒ですよね。。。</p>
@@ -127,7 +127,6 @@
                 <p>いつどこで何があるかわからないからこそ今日の今この時でも買い揃えておくのがいいのではないかと思います！</p>
                 <p>ここまでご清聴していた但木誠にありがとうございました！関連記事が下にもありますのでそちらの方もぜひご覧になってください！</p>
                 <p>では、また次の記事でお会いしましょう！！</p>
-                <img class="free_img" src="#">
                 <h2 id="re-arti">関連記事</h2>
                 <div class="arti-list">
                     <a href="https://px.a8.net/svt/ejp?a8mat=3TF708+C3TBLE+348+6O9OX" rel="nofollow">
