--- a/webhome-3/pacture/logo.html
+++ b/webhome-3/pacture/logo.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <link rel="stylesheet" href="../css_folder/article.css"><!--css名変える-->
-        <title>ロゴ / バナー</title><!--1.タイトル-->
-        <meta name="description" content="当社のロゴ / バナーについて"><!--2.説明文-->
-        <meta name="keywords" content="ロゴ, バナー, logo, banner"><!--3.キーワード-->
+        <link rel="stylesheet" href="../css_folder/article.css">
+        <title>ロゴ / バナー</title>
+        <meta name="description" content="当社のロゴ / バナーについて">
+        <meta name="keywords" content="ロゴ, バナー, logo, banner">
         <link rel="shortcut icon" href="../img/Pac.ico" type="image/x-icon">
         <link rel="apple-touch-icon" href="../img/Pac.png" sizes="180x180">
         <link rel="icon" type="image/png" href="../img/Pac.png" sizes="192x192">
@@ -22,7 +22,7 @@
             </div>
             <div class="arti">
                 <h1>ロゴ / バナー</h1>
-                <a href=../index.html><img class="logo" src="../img/Pac.png"></a><p class="open_day">公開日 2023/**/△△</p>
+                <a href=../index.html><img class="logo" src="../img/Pac.png"></a><p class="open_day">公開日 2023/09/26</p>
                 <h2>ロゴについて</h2>
                 <img class="logo2" src="../img/Pac.png">
                 <h2 id="re-arti">関連記事</h2>
