--- a/webhome-3/pacture/cleaner.html
+++ b/webhome-3/pacture/cleaner.html
@@ -73,7 +73,7 @@
         <p>拭いてくれるところです！これは手間が省けるので</p>
         <p>使っていてすごく効率がよく自分の労力も減るので</p>
         <p>楽なので是非買って使いやすさを実感してください！</p>
-        <a href="https://hb.afl.rakuten.co.jp/ichiba/335ce6c7.3ec8bdcb.335ce6c8.982dd0ec/?pc=https%3A%2F%2Fproduct.rakuten.co.jp%2Fproduct%2F-%2Fa809e8d379346c175223634c774f3e89%2F&link_type=text&ut=eyJwYWdlIjoiaXRlbSIsInR5cGUiOiJ0ZXh0Iiwic2l6ZSI6IjY0eDY0IiwibmFtIjoxLCJuYW1wIjoicmlnaHQiLCJjb20iOjEsImNvbXAiOiJkb3duIiwicHJpY2UiOjAsImJvciI6MSwiY29sIjoxLCJiYnRuIjoxLCJwcm9kIjoxLCJhbXAiOmZhbHNlfQ%3D%3D" target="_blank" rel="nofollow sponsored noopener" style="word-wrap:break-word;"  >楽天で見る  ></a>
+        <a href="https://hb.afl.rakuten.co.jp/ichiba/335ce6c7.3ec8bdcb.335ce6c8.982dd0ec/?pc=https%3A%2F%2Fproduct.rakuten.co.jp%2Fproduct%2F-%2Fa809e8d379346c175223634c774f3e89%2F&link_type=text&ut=eyJwYWdlIjoiaXRlbSIsInR5cGUiOiJ0ZXh0Iiwic2l6ZSI6IjY0eDY0IiwibmFtIjoxLCJuYW1wIjoicmlnaHQiLCJjb20iOjEsImNvbXAiOiJkb3duIiwicHJpY2UiOjAsImJvciI6MSwiY29sIjoxLCJiYnRuIjoxLCJwcm9kIjoxLCJhbXAiOmZhbHNlfQ%3D%3D" target="_blank" rel="nofollow sponsored noopener" class="link">楽天で見る  ></a>
         <h2 id="mo-6">まとめ</h2>
         <p>いかがでしたか？</p>
         <p>今回はオススメの掃除機を様々な種類や用途に合わせて5種類紹介しました！</p>
