--- a/webhome-3/pacture/qa.html
+++ b/webhome-3/pacture/qa.html
@@ -22,7 +22,7 @@
             </div>
             <div class="arti">
                 <h1>Q&A</h1>
-                <a href=../index.html><img class="logo" src="../img/Pac.png"></a><p class="open_day">公開日 2023/**/△△</p>
+                <a href=../index.html><img class="logo" src="../img/Pac.png"></a><p class="open_day">公開日 2023/09/26</p>
                 <p>ただいま作成中です</p>
                 <h2 id="re-arti">関連記事</h2>
                 <div class="arti-list">
