changed css folder.

--- a/webhome-3/list/l-cleaner.html
+++ b/webhome-3/list/l-cleaner.html
@@ -4,6 +4,6 @@
     <link rel="stylesheet" href="../css_folder/list.css">
 </head>
 <body>
-    <img src="img/sen.jpeg">
+    <img src="l-img/cleaner.jpg">
     <h1><a href="pacture/fan.html">おすすめ扇風機5選!!!</a></h1>
 </body>
