--- a/webhome-3/list/l-cleaner.html
+++ b/webhome-3/list/l-cleaner.html
@@ -2,8 +2,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="../css_folder/list.css">
+    <title>テストオブリスト</title>
 </head>
 <body>
-    <img src="l-img/cleaner.jpg">
-    <h1><a href="pacture/fan.html">おすすめ扇風機5選!!!</a></h1>
+    <div class="list">
+        <h1>test.test</h1>
+        <img src="l-img/cleaner.jpg">
+        <h1><a href="pacture/fan.html">おすすめ扇風機5選!!!</a></h1>
+    </div>
 </body>
