changed the list.

--- a/webhome-3/list/l-cleaner.html
+++ b/webhome-3/list/l-cleaner.html
@@ -6,8 +6,7 @@
 </head>
 <body>
     <div class="list">
-        <h1>test.test</h1>
         <img src="l-img/cleaner.jpg">
-        <h1><a href="pacture/fan.html">おすすめ扇風機5選!!!</a></h1>
+        <h1><a href="pacture/fan.html" target="_top">おすすめ扇風機5選!!!</a></h1>
     </div>
 </body>
