--- a/webhome-3/pacture/search.html
+++ b/webhome-3/pacture/search.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <link rel="stylesheet" href="../css_folder/article.css"><!--css名変える-->
-        <title>title</title><!--1.タイトル-->
+        <title>検索結果</title><!--1.タイトル-->
         <meta name="description" content="sample"><!--2.説明文-->
         <meta name="keywords" content="sample"><!--3.キーワード-->
         <link rel="shortcut icon" href="../img/Pac.ico" type="image/x-icon">
