--- a/webhome-3/list/l-DRR.html
+++ b/webhome-3/list/l-DRR.html
@@ -7,6 +7,6 @@
 <body>
     <div class="list">
         <img src="l-img/cleaner.jpg">
-        <h1><a href="pacture/fan.html" target="_top">おすすめ扇風機5選!!!</a></h1>
+        <h1><a href="pacture/fan.html" target="_top">おすすめ防災5選!!!</a></h1>
     </div>
 </body>
