changed the suzuki's change.

--- a/webhome-3/pacture/cleaner.html
+++ b/webhome-3/pacture/cleaner.html
@@ -18,11 +18,18 @@
       </div>
       <div class="arti">
         <h1>【2023年版】掃除機で何を買えばいいのかわからない人は必見!!</h1>
-        <a href=../index.html><img class="logo" src="../img/Pac.png"></a><p class="open_day">公開日 2023/09/14</p>
+        <a href=../index.html><img class="logo" src=";./img/Pac.png"></a><p class="open_day">公開日 2023/09/14</p>
         <p>急ですがこの記事を見ているということは家電のことがあまり詳しくなかったり、</p>
         <p>一人暮らしや新生活を始めたけどどうすればいいのかわからない人が多いと思います。</p>
         <p>なのでそんな皆さんに今回はオススメの掃除機の紹介をしたいと思います。</p>
         <p>是非参考にしてくださいね！</p>
+        <br>
+        <br>
+        <a href="https://px.a8.net/svt/ejp?a8mat=3TF708+C3TBLE+348+6O9OX" rel="nofollow">
+        <img border="0" width="468" height="60" alt="" src="https://www29.a8.net/svt/bgt?aid=230816312732&wid=001&eno=01&mid=s00000000404001121000&mc=1"></a>
+        <img border="0" width="1" height="1" src="https://www19.a8.net/0.gif?a8mat=3TF708+C3TBLE+348+6O9OX" alt="">
+        <br>
+        <br>
         <div class="table">
           <h1>もくじ</h1>
           <ul>
@@ -35,6 +42,13 @@
             <a href="#re-arti"><li>関連記事</li></a>
           </ul>
         </div>
+        <br>
+        <br>
+        <a href="https://px.a8.net/svt/ejp?a8mat=3TF709+9LBFN6+50ZA+5Z6WX" rel="nofollow">
+        <img border="0" width="468" height="60" alt="" src="https://www25.a8.net/svt/bgt?aid=230816313580&wid=001&eno=01&mid=s00000023455001004000&mc=1"></a>
+        <img border="0" width="1" height="1" src="https://www14.a8.net/0.gif?a8mat=3TF709+9LBFN6+50ZA+5Z6WX" alt="">
+        <br>
+        <br>
         <h2 id="mo-1">1.モダンデコ コードレス掃除機 9,998円(税込)</h2>
         <p>この掃除機は1家に1台は欲しいシンプルな掃除機！</p>
         <p>コードレスの掃除機でありながら</p>
@@ -43,7 +57,14 @@
         <p>さらにミニマリストにはたまらないシンプルさ</p> 
         <p>と可愛さがあり、カラーバリエーションも豊富で</p>
         <p>コスパも良くとてもオススメです！</p>
-        <a href="https://hb.afl.rakuten.co.jp/ichiba/335ce6c7.3ec8bdcb.335ce6c8.982dd0ec/?pc=https%3A%2F%2Fproduct.rakuten.co.jp%2Fproduct%2F-%2Fa809e8d379346c175223634c774f3e89%2F&link_type=text&ut=eyJwYWdlIjoiaXRlbSIsInR5cGUiOiJ0ZXh0Iiwic2l6ZSI6IjY0eDY0IiwibmFtIjoxLCJuYW1wIjoicmlnaHQiLCJjb20iOjEsImNvbXAiOiJkb3duIiwicHJpY2UiOjAsImJvciI6MSwiY29sIjoxLCJiYnRuIjoxLCJwcm9kIjoxLCJhbXAiOmZhbHNlfQ%3D%3D" target="_blank" rel="nofollow sponsored noopener" class="link">楽天で見る  ></a>
+        <a href="https://hb.afl.rakuten.co.jp/ichiba/335ce6c7.3ec8bdcb.335ce6c8.982dd0ec/?pc=https%3A%2F%2Fproduct.rakuten.co.jp%2Fproduct%2F-%2Fa809e8d379346c175223634c774f3e89%2F&link_type=text&ut=eyJwYWdlIjoiaXRlbSIsInR5cGUiOiJ0ZXh0Iiwic2l6ZSI6IjY0eDY0IiwibmFtIjoxLCJuYW1wIjoicmlnaHQiLCJjb20iOjEsImNvbXAiOiJkb3duIiwicHJpY2UiOjAsImJvciI6MSwiY29sIjoxLCJiYnRuIjoxLCJwcm9kIjoxLCJhbXAiOmZhbHNlfQ%3D%3D" target="_blank" rel="nofollow sponsored noopener" style="word-wrap:break-word;"  >楽天で見る  ></a>
+        <br>
+        <br>
+        <a href="https://px.a8.net/svt/ejp?a8mat=3TF709+9KQ01E+3TDK+5ZU29" rel="nofollow">
+        <img border="0" width="468" height="60" alt="" src="https://www28.a8.net/svt/bgt?aid=230816313579&wid=001&eno=01&mid=s00000017804001007000&mc=1"></a>
+        <img border="0" width="1" height="1" src="https://www19.a8.net/0.gif?a8mat=3TF709+9KQ01E+3TDK+5ZU29" alt="">
+        <br>
+        <br>  
         <h2 id="mo-2">2.マキタ コードレス掃除機  15,730円(税込)</h2>
         <p>次は掃除機では有名なマキタの掃除機！</p>
         <p>こちらもコードレスの掃除機です</p>
@@ -51,21 +72,41 @@
         <p>紙パック式なのでゴミが溜まったらすぐに捨てて新しい紙パックと</p>
         <p>交換すればいいだけなのでこの掃除機もシンプルに使いやすくて</p>
         <p>オススメです！</p>
-        <a href="https://hb.afl.rakuten.co.jp/ichiba/335ce6c7.3ec8bdcb.335ce6c8.982dd0ec/?pc=https%3A%2F%2Fproduct.rakuten.co.jp%2Fproduct%2F-%2Fa809e8d379346c175223634c774f3e89%2F&link_type=text&ut=eyJwYWdlIjoiaXRlbSIsInR5cGUiOiJ0ZXh0Iiwic2l6ZSI6IjY0eDY0IiwibmFtIjoxLCJuYW1wIjoicmlnaHQiLCJjb20iOjEsImNvbXAiOiJkb3duIiwicHJpY2UiOjAsImJvciI6MSwiY29sIjoxLCJiYnRuIjoxLCJwcm9kIjoxLCJhbXAiOmZhbHNlfQ%3D%3D" target="_blank" rel="nofollow sponsored noopener" class="link">楽天で見る  ></a>
+        <a href="https://hb.afl.rakuten.co.jp/ichiba/335ce6c7.3ec8bdcb.335ce6c8.982dd0ec/?pc=https%3A%2F%2Fproduct.rakuten.co.jp%2Fproduct%2F-%2Fa809e8d379346c175223634c774f3e89%2F&link_type=text&ut=eyJwYWdlIjoiaXRlbSIsInR5cGUiOiJ0ZXh0Iiwic2l6ZSI6IjY0eDY0IiwibmFtIjoxLCJuYW1wIjoicmlnaHQiLCJjb20iOjEsImNvbXAiOiJkb3duIiwicHJpY2UiOjAsImJvciI6MSwiY29sIjoxLCJiYnRuIjoxLCJwcm9kIjoxLCJhbXAiOmZhbHNlfQ%3D%3D" target="_blank" rel="nofollow sponsored noopener" style="word-wrap:break-word;"  >楽天で見る  ></a>
+        <br>
+        <br>
+        <a href="https://px.a8.net/svt/ejp?a8mat=3TF709+A2L06Q+28X2+U0W1D" rel="nofollow">
+        <img border="0" width="468" height="60" alt="" src="https://www26.a8.net/svt/bgt?aid=230816313609&wid=001&eno=01&mid=s00000010487005043000&mc=1"></a>
+        <img border="0" width="1" height="1" src="https://www13.a8.net/0.gif?a8mat=3TF709+A2L06Q+28X2+U0W1D" alt="">
+        <br>
+        <br>  
         <h2 id="mo-3">3.アイロボット ルンバi2 29,800円(税込)</h2>
         <p>続いてはルンバの紹介です！</p>
         <p>このアイロボット社のルンバは性能的にも値段的にも最高の</p>
         <p>ルンバだと思います！</p>
         <p>しかも期間限定セールで安くなってるから買う方は急いで！</p>
         <p>（もうセールが終わっている場合もあるのでご了承ください）</p>
-        <a href="https://hb.afl.rakuten.co.jp/ichiba/335ce6c7.3ec8bdcb.335ce6c8.982dd0ec/?pc=https%3A%2F%2Fproduct.rakuten.co.jp%2Fproduct%2F-%2Fa809e8d379346c175223634c774f3e89%2F&link_type=text&ut=eyJwYWdlIjoiaXRlbSIsInR5cGUiOiJ0ZXh0Iiwic2l6ZSI6IjY0eDY0IiwibmFtIjoxLCJuYW1wIjoicmlnaHQiLCJjb20iOjEsImNvbXAiOiJkb3duIiwicHJpY2UiOjAsImJvciI6MSwiY29sIjoxLCJiYnRuIjoxLCJwcm9kIjoxLCJhbXAiOmZhbHNlfQ%3D%3D" target="_blank" rel="nofollow sponsored noopener" class="link">楽天で見る  ></a>
+        <a href="https://hb.afl.rakuten.co.jp/ichiba/335ce6c7.3ec8bdcb.335ce6c8.982dd0ec/?pc=https%3A%2F%2Fproduct.rakuten.co.jp%2Fproduct%2F-%2Fa809e8d379346c175223634c774f3e89%2F&link_type=text&ut=eyJwYWdlIjoiaXRlbSIsInR5cGUiOiJ0ZXh0Iiwic2l6ZSI6IjY0eDY0IiwibmFtIjoxLCJuYW1wIjoicmlnaHQiLCJjb20iOjEsImNvbXAiOiJkb3duIiwicHJpY2UiOjAsImJvciI6MSwiY29sIjoxLCJiYnRuIjoxLCJwcm9kIjoxLCJhbXAiOmZhbHNlfQ%3D%3D" target="_blank" rel="nofollow sponsored noopener" style="word-wrap:break-word;"  >楽天で見る  ></a>
+        <br>
+        <br>
+        <img border="0" width="468" height="60" alt="" src="https://www23.a8.net/svt/bgt?aid=230814276850&wid=001&eno=01&mid=s00000024327001007000&mc=1"></a>
+        <img border="0" width="1" height="1" src="https://www14.a8.net/0.gif?a8mat=3TF5FO+E22GZ6+57PI+5ZU29" alt="">
+        <br>
+        <br>  
         <h2 id="mo-4">4.日立 サイクロン掃除機 18,000円(税込)</h2>
         <p>こちらはキャニスター型の掃除機です！</p>
         <p>キャニスター掃除機は基本的に吸引力がすごい</p>
         <p>のですがこの掃除機はそれだけでなくライトニングコスト</p>
         <p>がかからないので便利で使いやすいのでキャニスター掃除機</p>
         <p>の中だとものすごくオススメの掃除機です！</p>
-        <a href="https://hb.afl.rakuten.co.jp/ichiba/335ce6c7.3ec8bdcb.335ce6c8.982dd0ec/?pc=https%3A%2F%2Fproduct.rakuten.co.jp%2Fproduct%2F-%2Fa809e8d379346c175223634c774f3e89%2F&link_type=text&ut=eyJwYWdlIjoiaXRlbSIsInR5cGUiOiJ0ZXh0Iiwic2l6ZSI6IjY0eDY0IiwibmFtIjoxLCJuYW1wIjoicmlnaHQiLCJjb20iOjEsImNvbXAiOiJkb3duIiwicHJpY2UiOjAsImJvciI6MSwiY29sIjoxLCJiYnRuIjoxLCJwcm9kIjoxLCJhbXAiOmZhbHNlfQ%3D%3D" target="_blank" rel="nofollow sponsored noopener" class="link">楽天で見る  ></a>
+        <a href="https://hb.afl.rakuten.co.jp/ichiba/335ce6c7.3ec8bdcb.335ce6c8.982dd0ec/?pc=https%3A%2F%2Fproduct.rakuten.co.jp%2Fproduct%2F-%2Fa809e8d379346c175223634c774f3e89%2F&link_type=text&ut=eyJwYWdlIjoiaXRlbSIsInR5cGUiOiJ0ZXh0Iiwic2l6ZSI6IjY0eDY0IiwibmFtIjoxLCJuYW1wIjoicmlnaHQiLCJjb20iOjEsImNvbXAiOiJkb3duIiwicHJpY2UiOjAsImJvciI6MSwiY29sIjoxLCJiYnRuIjoxLCJwcm9kIjoxLCJhbXAiOmZhbHNlfQ%3D%3D" target="_blank" rel="nofollow sponsored noopener" style="word-wrap:break-word;"  >楽天で見る  ></a>
+        <br>
+        <br>
+        <a href="https://px.a8.net/svt/ejp?a8mat=3TF5FO+E39C6Q+49CU+2HBVLT" rel="nofollow">
+        <img border="0" width="468" height="60" alt="" src="https://www25.a8.net/svt/bgt?aid=230814276852&wid=001&eno=01&mid=s00000019875015004000&mc=1"></a>
+        <img border="0" width="1" height="1" src="https://www12.a8.net/0.gif?a8mat=3TF5FO+E39C6Q+49CU+2HBVLT" alt="">
+        <br>
+        <br>  
         <h2 id="mo-5">5.ECOVACS ロボット掃除機 85,000円(税込)</h2>
         <p>この掃除機はルンバの仲間なのですが</p>
         <p>ルンバの中でも性能が飛び抜けてすごい！</p>
@@ -73,7 +114,14 @@
         <p>拭いてくれるところです！これは手間が省けるので</p>
         <p>使っていてすごく効率がよく自分の労力も減るので</p>
         <p>楽なので是非買って使いやすさを実感してください！</p>
-        <a href="https://hb.afl.rakuten.co.jp/ichiba/335ce6c7.3ec8bdcb.335ce6c8.982dd0ec/?pc=https%3A%2F%2Fproduct.rakuten.co.jp%2Fproduct%2F-%2Fa809e8d379346c175223634c774f3e89%2F&link_type=text&ut=eyJwYWdlIjoiaXRlbSIsInR5cGUiOiJ0ZXh0Iiwic2l6ZSI6IjY0eDY0IiwibmFtIjoxLCJuYW1wIjoicmlnaHQiLCJjb20iOjEsImNvbXAiOiJkb3duIiwicHJpY2UiOjAsImJvciI6MSwiY29sIjoxLCJiYnRuIjoxLCJwcm9kIjoxLCJhbXAiOmZhbHNlfQ%3D%3D" target="_blank" rel="nofollow sponsored noopener" class="link">楽天で見る  ></a>
+        <a href="https://hb.afl.rakuten.co.jp/ichiba/335ce6c7.3ec8bdcb.335ce6c8.982dd0ec/?pc=https%3A%2F%2Fproduct.rakuten.co.jp%2Fproduct%2F-%2Fa809e8d379346c175223634c774f3e89%2F&link_type=text&ut=eyJwYWdlIjoiaXRlbSIsInR5cGUiOiJ0ZXh0Iiwic2l6ZSI6IjY0eDY0IiwibmFtIjoxLCJuYW1wIjoicmlnaHQiLCJjb20iOjEsImNvbXAiOiJkb3duIiwicHJpY2UiOjAsImJvciI6MSwiY29sIjoxLCJiYnRuIjoxLCJwcm9kIjoxLCJhbXAiOmZhbHNlfQ%3D%3D" target="_blank" rel="nofollow sponsored noopener" style="word-wrap:break-word;"  >楽天で見る  ></a>
+        <br>
+        <br>
+        <a href="https://px.a8.net/svt/ejp?a8mat=3TF67H+3U4L4I+279M+C9J29" rel="nofollow">
+        <img border="0" width="728" height="90" alt="" src="https://www23.a8.net/svt/bgt?aid=230815277232&wid=001&eno=01&mid=s00000010273002060000&mc=1"></a>
+        <img border="0" width="1" height="1" src="https://www18.a8.net/0.gif?a8mat=3TF67H+3U4L4I+279M+C9J29" alt="">
+        <br>
+        <br>  
         <h2 id="mo-6">まとめ</h2>
         <p>いかがでしたか？</p>
         <p>今回はオススメの掃除機を様々な種類や用途に合わせて5種類紹介しました！</p>
