--- a/webhome-3/pacture/movie1.html
+++ b/webhome-3/pacture/movie1.html
@@ -3,13 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <link rel="stylesheet" href="../css_folder/movie2.css"><!--css名変える-->
+        <link rel="stylesheet" href="../css_folder/article.css"><!--css名変える-->
         <title>>週末に観るべき映画 5選!!</title><!--1.タイトル-->
         <meta name="description" content="皆さんは平日に働いて疲れ、休日には趣味を楽しんでいることでしょう。しかし、映画選びを失敗してしまうこともあるかもしれません。この記事では、女性と見るのに適した映画や家族で感動できる映画など、さまざまな場面で楽しめる映画を紹介します。映画好きの方には既に知られた作品もあるかもしれませんが、次回の記事もお楽しみに！"><!--2.説明文-->
         <meta name="keywords" content="movie"><!--3.キーワード-->
         <link rel="shortcut icon" href="../img/Pac.ico" type="image/x-icon">
         <link rel="apple-touch-icon" href="../img/Pac.png" sizes="180x180">
         <link rel="icon" type="image/png" href="../img/Pac.png" sizes="192x192">
+        
     </head>
     <body>
     <div class="wrap">
@@ -29,6 +30,13 @@
                 <p>日はみなさんそれぞれの趣味に赴いていると思いますが、時間がある時に選ぶ映画を失敗してしまって苦い経験をしてしまったことがあるひともいるのではないでしょうか。</p>
                 <p>またこの記事では女性と見るときにものすごく適しているもの、家族全員で感動できるものなど色々な場面で活躍できる映画を紹介します。</p>
                 <p>比較的有名な作品をご紹介するので映画が趣味の人は見たことがある作品もあるかと思いますが、そんな人は次回の記事をお待ちください！</p>
+                <br>
+                <br>
+                <a href="https://px.a8.net/svt/ejp?a8mat=3TF708+C3TBLE+348+6O9OX" rel="nofollow">
+                <img border="0" width="468" height="60" alt="" src="https://www29.a8.net/svt/bgt?aid=230816312732&wid=001&eno=01&mid=s00000000404001121000&mc=1"></a>
+                <img border="0" width="1" height="1" src="https://www19.a8.net/0.gif?a8mat=3TF708+C3TBLE+348+6O9OX" alt="">
+                <br>
+                <br>
                 <div class="table">
                     <h1>もくじ</h1>
                     <ul>
@@ -41,6 +49,13 @@
                         <a href="#re-arti"><li>関連記事</li></a>
                     </ul>
                 </div>
+                <br>
+                <br>
+                <a href="https://px.a8.net/svt/ejp?a8mat=3TF709+9LBFN6+50ZA+5Z6WX" rel="nofollow">
+                <img border="0" width="468" height="60" alt="" src="https://www25.a8.net/svt/bgt?aid=230816313580&wid=001&eno=01&mid=s00000023455001004000&mc=1"></a>
+                <img border="0" width="1" height="1" src="https://www14.a8.net/0.gif?a8mat=3TF709+9LBFN6+50ZA+5Z6WX" alt="">
+                <br>
+                <br>
                 <h2 id="mo-1">1,どんな人でも感動できる!【万引き家族】📽2018年  2時間</h2>
                 <!--一つ目の項目--><!--小見出しはh3、その他はp-->
                 <img src="../img/movie1/manbi.jpg" class="samune">
@@ -50,6 +65,13 @@
                 <p>少し18禁のような描写があったりしてとてもディープな作品となっています!</p>
                 <p>初見でなんか既視感があると思っていたら、どことなくサザエさんに似ていると感じました。</p>
                 <p>色々考えさせられることもありますが感動もできる作品なのでぜひご覧ください！</p>
+                <br>
+                <br>
+                <a href="https://px.a8.net/svt/ejp?a8mat=3TF709+9KQ01E+3TDK+5ZU29" rel="nofollow">
+                <img border="0" width="468" height="60" alt="" src="https://www28.a8.net/svt/bgt?aid=230816313579&wid=001&eno=01&mid=s00000017804001007000&mc=1"></a>
+                <img border="0" width="1" height="1" src="https://www19.a8.net/0.gif?a8mat=3TF709+9KQ01E+3TDK+5ZU29" alt="">
+                <br>
+                <br>
                 <h2 id="mo-2">2,パートナーとみたら抱きしめたくなる!【君の膵臓を食べたい】📽2017  1時間55分</h2>
                 <!--二つ目の項目-->
                 <img src="../img/movie1/kimino.jpg" class="samune">
@@ -58,9 +80,13 @@
                 <p>大まかなあらすじは、高校の同級生であった主人公とヒロインが、ヒロインの秘密を共有することによって親密になっていきます。</p>
                 <p>最後の展開には目が離せません。</p>
                 <p>涙あり感動ありの作品になっているのでパートナー並びに大事な人と一緒に箱ティッシュ片手にぜひご覧ください！</p>
-                <a href="https://px.a8.net/svt/ejp?a8mat=3TF5FO+DW44XE+51YA+5ZU29" rel="nofollow">
-                    <img border="0" width="300" height="250" alt="" src="https://www21.a8.net/svt/bgt?aid=230814276840&wid=001&eno=01&mid=s00000023581001007000&mc=1"></a>
-                    <img border="0" width="1" height="1" src="https://www17.a8.net/0.gif?a8mat=3TF5FO+DW44XE+51YA+5ZU29" alt="">
+                <br>
+                <br>
+                <a href="https://px.a8.net/svt/ejp?a8mat=3TF709+A2L06Q+28X2+U0W1D" rel="nofollow">
+                <img border="0" width="468" height="60" alt="" src="https://www26.a8.net/svt/bgt?aid=230816313609&wid=001&eno=01&mid=s00000010487005043000&mc=1"></a>
+                <img border="0" width="1" height="1" src="https://www13.a8.net/0.gif?a8mat=3TF709+A2L06Q+28X2+U0W1D" alt="">
+                <br>
+                <br>
                 <h2 id="mo-3">3,全体的にただただ綺麗だと思ってしまう作品!【ミスミソウ】📽2018   1時間55分</h2>
                 <img src="../img/movie1/misumi2.jpg" class="samune">
                 <p>この作品は予告をちょっと見てみたところ、僕の好きそうな作品だと実感して拝見しました。</p>
@@ -70,12 +96,25 @@
                 <p>終始雪が降っていてそこに広がる赤が綺麗だと感じてしまう作品となっています。</p>
                 <p>最後の方は少し残酷な描写がある作品ですが、興味があるひとはぜひご覧ください！</p>
                 <h2 id="mo-4">4,挑戦をしているすべての人へ!【グレイテスト・ショウマン】📽2017  1時間45分</h2>
+                <br>
+                <br>
+                <img border="0" width="468" height="60" alt="" src="https://www23.a8.net/svt/bgt?aid=230814276850&wid=001&eno=01&mid=s00000024327001007000&mc=1"></a>
+                <img border="0" width="1" height="1" src="https://www14.a8.net/0.gif?a8mat=3TF5FO+E22GZ6+57PI+5ZU29" alt="">
+                <br>
+                <br>
                 <img src="../img/movie1/gurei.jpg" class="samune">
                 <p>この作品はいろんな人や評判ですごく面白いと聞いていたので、ずっとウォッチリストに入れてていつか見よういつか見ようと思いながら最近になってようやくみた作品です！</p>
                 <p>大まかなあらすじは、貧しい家に生まれながらも令嬢と結婚した主人公はさまざまな個性を持ちながらも虐げられ日陰に生きている、そんな人々を集めて誰もみたことがないようなショーを作り上げる！</p>
                 <p>なにかコンプレックスを抱えながらも自分の発信したいことがあってもやもやしている人たちがショーを通じて成長していく姿には感極まります。</p>
                 <p>映画全体に歌が散りばめられている作品なので演劇を見ている気分にも近い感覚を得ます。</p>
                 <p>もし一度も見たことがない人がいたら絶対にご覧ください！</p>
+                <br>
+                <br>
+                <a href="https://px.a8.net/svt/ejp?a8mat=3TF5FO+E39C6Q+49CU+2HBVLT" rel="nofollow">
+                <img border="0" width="468" height="60" alt="" src="https://www25.a8.net/svt/bgt?aid=230814276852&wid=001&eno=01&mid=s00000019875015004000&mc=1"></a>
+                <img border="0" width="1" height="1" src="https://www12.a8.net/0.gif?a8mat=3TF5FO+E39C6Q+49CU+2HBVLT" alt="">
+                <br>
+                <br>
                 <h2 id="mo-5">5,とにかくエモすぎる作品【聲の形】📽2016  2時間9分</h2>
                 <img src="../img/movie1/koe.jpg" class="samune">
                 <p>この作品は漫画で先に知っていて映画も見てみようと思った作品です！</p>
@@ -84,8 +123,15 @@
                 <p>補聴器は高い物なので買い換えるのも限界となった彼女の母親が主人公らに支払いを命じました。</p>
                 <p>その出来事を機に再び転校してしまいもう会うことはないと思っていた矢先、手話教室にて2人が出会って。。。</p>
                 <p>この作品の主人公は何か自分とも重ねてしまう部分もあって、それを抱えて生きていく覚悟を持った主人公が心に刺さります。</p>
+                <br>
+                <br>
+                <a href="https://px.a8.net/svt/ejp?a8mat=3TF67H+3U4L4I+279M+C9J29" rel="nofollow">
+                <img border="0" width="728" height="90" alt="" src="https://www23.a8.net/svt/bgt?aid=230815277232&wid=001&eno=01&mid=s00000010273002060000&mc=1"></a>
+                <img border="0" width="1" height="1" src="https://www18.a8.net/0.gif?a8mat=3TF67H+3U4L4I+279M+C9J29" alt="">
+                <br>
+                <br>
                 <h2 id="mo-6">まとめ</h2>
-                <img src="../img../movie1/samune2.jpg" class="samune">
+                <img src="../img/movie1/samune2.jpg" class="samune">
                 <p>以上、【週末に見るべきおすすめ映画５選】でした。</p>
                 <h2 id="re-arti">関連記事</h2>
                 <div class="arti-list">
