--- a/webhome-3/pacture/DRR.html
+++ b/webhome-3/pacture/DRR.html
@@ -12,7 +12,6 @@
         <link rel="icon" type="image/png" href="../img/Pac.png" sizes="192x192">
     </head>
     <body>
-    <div class="wrap">
         <header>
             <iframe src="header.html" scrolling="no" frameborder="no" width="100%"></iframe>
         </header>
@@ -20,7 +19,7 @@
             <div class="left">
                 <iframe src="leftmenu.html" scrolling="no" frameborder="no"></iframe>
             </div>
-            <div class="arti">
+            <div class="art">
                 <h1>【2023年度版】最新のおすすめ防災グッズ！！</h1>
                 <a href=../index.html><img class="logo" src="../img/Pac.png"></a><p class="open_day">公開日 2023/09/20</p>
                 <p>最近、色々物騒ですよね。。。</p>
@@ -50,6 +49,13 @@
                         </div>
                     </ul>
                 </div>
+                <br>
+                <br>
+                <a href="https://px.a8.net/svt/ejp?a8mat=3TF709+9LBFN6+50ZA+5Z6WX" rel="nofollow">
+                <img border="0" width="468" height="60" alt="" src="https://www25.a8.net/svt/bgt?aid=230816313580&wid=001&eno=01&mid=s00000023455001004000&mc=1"></a>
+                <img border="0" width="1" height="1" src="https://www14.a8.net/0.gif?a8mat=3TF709+9LBFN6+50ZA+5Z6WX" alt="">
+                <br>
+                <br>
                 <h2 id="mo-0">災害用具ってどれくらいもてばいいの？~一人暮らし編~</h2>
                 <img src="../img/DRR.jpg" class="img">
                 <h3>緊急時に逃げる時に大きな荷物を持ち運びながら避難することは難しいですし、下手すると逃げ遅れてしまいますよね？</h3>
@@ -57,6 +63,11 @@
                 <p>一般的には<span class="under1">三日分の備蓄品</span>があれば良いとされています。</p>
                 <p>また一人暮らしの方が最低限持っておくべき持ち物は<span class="under2">飲料水(500mlの水を三本)、食料品(サトウのご飯、レトルトカレーなど保存ができるもの)、簡易トイレなどの衛生用品、薬や救急箱、懐中電灯や災害用のラジオなど</span>があればある最低限の生活ができると思われます！</p>
                 <p>これはあくまで最低でも持っておきたいものなので個人で必要なものがあったら各自で準備して備えていきましょう！</p>               
+                <br>
+                <br>
+                <a href="https://px.a8.net/svt/ejp?a8mat=3TF709+9KQ01E+3TDK+5ZU29" rel="nofollow">
+                <img border="0" width="468" height="60" alt="" src="https://www28.a8.net/svt/bgt?aid=230816313579&wid=001&eno=01&mid=s00000017804001007000&mc=1"></a>
+                <img border="0" width="1" height="1" src="https://www19.a8.net/0.gif?a8mat=3TF709+9KQ01E+3TDK+5ZU29" alt="">
                 <br>
                 <br>
                 <h2 id ="mo-1"><a href="https://hb.afl.rakuten.co.jp/ichiba/3566c599.4a513202.3566c59a.05448bb6/?pc=https%3A%2F%2Fitem.rakuten.co.jp%2Fpro-bousai%2Fhinanset%2F&link_type=hybrid_url&ut=eyJwYWdlIjoiaXRlbSIsInR5cGUiOiJoeWJyaWRfdXJsIiwic2l6ZSI6IjI0MHgyNDAiLCJuYW0iOjEsIm5hbXAiOiJyaWdodCIsImNvbSI6MSwiY29tcCI6ImRvd24iLCJwcmljZSI6MCwiYm9yIjoxLCJjb2wiOjEsImJidG4iOjEsInByb2QiOjAsImFtcCI6ZmFsc2V9">No.1 防災セット 地震対策30点避難セット 22000円(税込)</a></h2>
@@ -69,6 +80,11 @@
                 <p>そして何よりこの商品は色々な企業や雑誌などで採用されています！また多くのテレビ番組でも紹介されていることから品質的にはお値段以上のものですのでぜひ購入して災害に備えてください！</p>
                 <!--一つ目の項目--><!--小見出しはh3、その他はp-->
                 <a href="https://hb.afl.rakuten.co.jp/ichiba/3566c599.4a513202.3566c59a.05448bb6/?pc=https%3A%2F%2Fitem.rakuten.co.jp%2Fpro-bousai%2Fhinanset%2F&link_type=hybrid_url&ut=eyJwYWdlIjoiaXRlbSIsInR5cGUiOiJoeWJyaWRfdXJsIiwic2l6ZSI6IjQwMHg0MDAiLCJuYW0iOjEsIm5hbXAiOiJyaWdodCIsImNvbSI6MSwiY29tcCI6ImRvd24iLCJwcmljZSI6MCwiYm9yIjoxLCJjb2wiOjEsImJidG4iOjEsInByb2QiOjAsImFtcCI6ZmFsc2V9" class="link">楽天市場で見る   ></a>
+                <br>
+                <br>
+                <a href="https://px.a8.net/svt/ejp?a8mat=3TF709+A2L06Q+28X2+U0W1D" rel="nofollow">
+                <img border="0" width="468" height="60" alt="" src="https://www26.a8.net/svt/bgt?aid=230816313609&wid=001&eno=01&mid=s00000010487005043000&mc=1"></a>
+                <img border="0" width="1" height="1" src="https://www13.a8.net/0.gif?a8mat=3TF709+A2L06Q+28X2+U0W1D" alt="">
                 <br>
                 <br>
                 <h2 id="mo-2"><a href="https://hb.afl.rakuten.co.jp/ichiba/358df6f9.9cfdbb9d.358df6fa.227731a6/?pc=https%3A%2F%2Fitem.rakuten.co.jp%2Ff043214-ogawara%2F52320246%2F&link_type=hybrid_url&ut=eyJwYWdlIjoiaXRlbSIsInR5cGUiOiJoeWJyaWRfdXJsIiwic2l6ZSI6IjQwMHg0MDAiLCJuYW0iOjEsIm5hbXAiOiJyaWdodCIsImNvbSI6MSwiY29tcCI6ImRvd24iLCJwcmljZSI6MCwiYm9yIjoxLCJjb2wiOjEsImJidG4iOjEsInByb2QiOjAsImFtcCI6ZmFsc2V9">No.2 防災セット SHELTER プレミアム 3人用 28600円(税込)</a></h2>
@@ -84,6 +100,10 @@
                 <a href="https://hb.afl.rakuten.co.jp/ichiba/358df6f9.9cfdbb9d.358df6fa.227731a6/?pc=https%3A%2F%2Fitem.rakuten.co.jp%2Ff043214-ogawara%2F52320246%2F&link_type=hybrid_url&ut=eyJwYWdlIjoiaXRlbSIsInR5cGUiOiJoeWJyaWRfdXJsIiwic2l6ZSI6IjQwMHg0MDAiLCJuYW0iOjEsIm5hbXAiOiJyaWdodCIsImNvbSI6MSwiY29tcCI6ImRvd24iLCJwcmljZSI6MCwiYm9yIjoxLCJjb2wiOjEsImJidG4iOjEsInByb2QiOjAsImFtcCI6ZmFsc2V9" class="link">楽天市場で見る   ></a>
                 <br>
                 <br>
+                <img border="0" width="468" height="60" alt="" src="https://www23.a8.net/svt/bgt?aid=230814276850&wid=001&eno=01&mid=s00000024327001007000&mc=1"></a>
+                <img border="0" width="1" height="1" src="https://www14.a8.net/0.gif?a8mat=3TF5FO+E22GZ6+57PI+5ZU29" alt="">
+                <br>
+                <br>
                 <h2 id="mo-3"><a href="https://hb.afl.rakuten.co.jp/ichiba/35a11006.f1e64a7b.35a11007.edc850c3/?pc=https%3A%2F%2Fitem.rakuten.co.jp%2Flock110%2F288354%2F&link_type=hybrid_url&ut=eyJwYWdlIjoiaXRlbSIsInR5cGUiOiJoeWJyaWRfdXJsIiwic2l6ZSI6IjQwMHg0MDAiLCJuYW0iOjEsIm5hbXAiOiJyaWdodCIsImNvbSI6MSwiY29tcCI6ImRvd24iLCJwcmljZSI6MCwiYm9yIjoxLCJjb2wiOjEsImJidG4iOjEsInByb2QiOjAsImFtcCI6ZmFsc2V9">No.3 防災リュック アイリスオーヤマ 14800円(税込)</a></h2>
                 <br>
                 <br>
@@ -94,6 +114,11 @@
                 <p>充電器は手回し充電機を採用するのではなく乾電池式のものを採用しており、避難時の無駄な体力消耗を防ぐことをしっかり考えられています！</p>
                 <p>他には<span class="under2">アイリスオーヤマ製のマスクやポンチョ、軍手、カッターなど</span>意外にないと生活に困るものがたくさん入っているのでとてもおすすめです！</p>
                 <a href="https://hb.afl.rakuten.co.jp/ichiba/35a11006.f1e64a7b.35a11007.edc850c3/?pc=https%3A%2F%2Fitem.rakuten.co.jp%2Flock110%2F288354%2F&link_type=hybrid_url&ut=eyJwYWdlIjoiaXRlbSIsInR5cGUiOiJoeWJyaWRfdXJsIiwic2l6ZSI6IjQwMHg0MDAiLCJuYW0iOjEsIm5hbXAiOiJyaWdodCIsImNvbSI6MSwiY29tcCI6ImRvd24iLCJwcmljZSI6MCwiYm9yIjoxLCJjb2wiOjEsImJidG4iOjEsInByb2QiOjAsImFtcCI6ZmFsc2V9" class="link">楽天市場で見る   ></a>
+                <br>
+                <br>
+                <a href="https://px.a8.net/svt/ejp?a8mat=3TF5FO+E39C6Q+49CU+2HBVLT" rel="nofollow">
+                <img border="0" width="468" height="60" alt="" src="https://www25.a8.net/svt/bgt?aid=230814276852&wid=001&eno=01&mid=s00000019875015004000&mc=1"></a>
+                <img border="0" width="1" height="1" src="https://www12.a8.net/0.gif?a8mat=3TF5FO+E39C6Q+49CU+2HBVLT" alt="">
                 <br>
                 <br>
                 <h2 id="mo-4"><a href="https://hb.afl.rakuten.co.jp/ichiba/35a511a9.ee4e6c85.35a511aa.da25b5ea/?pc=https%3A%2F%2Fitem.rakuten.co.jp%2Fpeaceup%2F10002068%2F&link_type=hybrid_url&ut=eyJwYWdlIjoiaXRlbSIsInR5cGUiOiJoeWJyaWRfdXJsIiwic2l6ZSI6IjQwMHg0MDAiLCJuYW0iOjEsIm5hbXAiOiJyaWdodCIsImNvbSI6MSwiY29tcCI6ImRvd24iLCJwcmljZSI6MCwiYm9yIjoxLCJjb2wiOjEsImJidG4iOjEsInByb2QiOjAsImFtcCI6ZmFsc2V9">No,4 防災セット 2人用 45点 ベーシック 9900円(税込)</a></h2>
@@ -108,6 +133,11 @@
                 <a href="https://hb.afl.rakuten.co.jp/ichiba/35a511a9.ee4e6c85.35a511aa.da25b5ea/?pc=https%3A%2F%2Fitem.rakuten.co.jp%2Fpeaceup%2F10002068%2F&link_type=hybrid_url&ut=eyJwYWdlIjoiaXRlbSIsInR5cGUiOiJoeWJyaWRfdXJsIiwic2l6ZSI6IjQwMHg0MDAiLCJuYW0iOjEsIm5hbXAiOiJyaWdodCIsImNvbSI6MSwiY29tcCI6ImRvd24iLCJwcmljZSI6MCwiYm9yIjoxLCJjb2wiOjEsImJidG4iOjEsInByb2QiOjAsImFtcCI6ZmFsc2V9" class="link">楽天市場で見る   ></a>
                 <br>
                 <br>
+                <a href="https://px.a8.net/svt/ejp?a8mat=3TF67H+3U4L4I+279M+C9J29" rel="nofollow">
+                <img border="0" width="728" height="90" alt="" src="https://www23.a8.net/svt/bgt?aid=230815277232&wid=001&eno=01&mid=s00000010273002060000&mc=1"></a>
+                <img border="0" width="1" height="1" src="https://www18.a8.net/0.gif?a8mat=3TF67H+3U4L4I+279M+C9J29" alt="">
+                <br>
+                <br>
                 <h2 id="mo-5"><a href="https://hb.afl.rakuten.co.jp/ichiba/35a51c4e.b63ab8fc.35a51c4f.1edd57b7/?pc=https%3A%2F%2Fitem.rakuten.co.jp%2Fjisin-bousai-goods%2F03%2F&link_type=hybrid_url&ut=eyJwYWdlIjoiaXRlbSIsInR5cGUiOiJoeWJyaWRfdXJsIiwic2l6ZSI6IjQwMHg0MDAiLCJuYW0iOjEsIm5hbXAiOiJyaWdodCIsImNvbSI6MSwiY29tcCI6ImRvd24iLCJwcmljZSI6MCwiYm9yIjoxLCJjb2wiOjEsImJidG4iOjEsInByb2QiOjAsImFtcCI6ZmFsc2V9">No,5 防災セット 家族 3人用 RN 26300円(税込)</a></h2>
                 <br>
                 <br>
@@ -119,6 +149,11 @@
                 <p>地震で怖いのは火災もありますよね！？それを防ぐグッズも収納されています。それは望遠フードです！これを使うことによって<span class="under1">一酸化中毒による被害を防ぐのと共に視界の確保もすることができます！</span></p>
                 <p>さらに避難時にもっとも必要なご飯もバリエーションが豊富に揃えられています！<span class="under2">水でできるおにぎり、ライスクッキーなど美味しい非常食が食べることができる</span>のでおすすめです！</p>
                 <a href="https://hb.afl.rakuten.co.jp/ichiba/35a51c4e.b63ab8fc.35a51c4f.1edd57b7/?pc=https%3A%2F%2Fitem.rakuten.co.jp%2Fjisin-bousai-goods%2F03%2F&link_type=hybrid_url&ut=eyJwYWdlIjoiaXRlbSIsInR5cGUiOiJoeWJyaWRfdXJsIiwic2l6ZSI6IjQwMHg0MDAiLCJuYW0iOjEsIm5hbXAiOiJyaWdodCIsImNvbSI6MSwiY29tcCI6ImRvd24iLCJwcmljZSI6MCwiYm9yIjoxLCJjb2wiOjEsImJidG4iOjEsInByb2QiOjAsImFtcCI6ZmFsc2V9" class="link">楽天市場で見る   ></a>
+                <br>
+                <br>
+                <a href="https://px.a8.net/svt/ejp?a8mat=3TF67H+3U4L4I+279M+C9J29" rel="nofollow">
+                <img border="0" width="728" height="90" alt="" src="https://www23.a8.net/svt/bgt?aid=230815277232&wid=001&eno=01&mid=s00000010273002060000&mc=1"></a>
+                <img border="0" width="1" height="1" src="https://www18.a8.net/0.gif?a8mat=3TF67H+3U4L4I+279M+C9J29" alt="">
                 <br>
                 <br>
                 <h2 id="mo-7">まとめ</h2>
@@ -157,6 +192,5 @@
         <footer>
             <iframe src="footer.html" scrolling="no" frameborder="no" width="100%"></iframe>
         </footer>
-    </div>
     </body>
 </html>
