--- a/webhome-3/list/l-DRR.html
+++ b/webhome-3/list/l-DRR.html
@@ -2,11 +2,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="../css_folder/list.css">
-    <title>テストオブリスト</title>
+    <title>リスト：防災</title>
 </head>
 <body>
     <div class="list">
-        <img src="l-img/cleaner.jpg">
-        <h1><a href="pacture/fan.html" target="_top">おすすめ防災5選!!!</a></h1>
+        <img src="l-img/DRR-samune.jpg">
+        <h1><a href="../pacture/DRR.html" target="_top">おすすめ防災5選!!!</a></h1>
     </div>
 </body>
