--- a/webhome-3/pacture/search.html
+++ b/webhome-3/pacture/search.html
@@ -26,6 +26,11 @@
                 <a href=../index.html><img class="logo" src="../img/Pac.png"></a><p class="open_day">公開日 2023/09/30</p>
                 <div id="results"></div>
                 <h2 id="re-arti">関連記事</h2>
+                <iframe class="relate" src="relate.html" scrolling="no" frameborder="no"></iframe>
+                
+<!--
+
+
                 <div class="arti-list">
                     <a href="https://px.a8.net/svt/ejp?a8mat=3TF708+C3TBLE+348+6O9OX" rel="nofollow">
                         <img border="0" width="468" height="60" alt="" src="https://www24.a8.net/svt/bgt?aid=230816312732&wid=001&eno=01&mid=s00000000404001121000&mc=1"></a>
@@ -47,6 +52,9 @@
                             <div><h1><a href="movie1.html">おすすめ映画5選!!!</a></h1></div>
                         </div>
                 </div>
+
+
+-->
             </div>
             <div class="right">
                 <iframe class="ri-i" src="rightmenu.html" scrolling="no" frameborder="no"></iframe>
